<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/White"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textview_dialog_onemsg_twobtn_title"
            style="@style/font_ed1c66_bold_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/my_heart_count" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <com.yj.wangjatv.widget.AnyEditTextView
                android:id="@+id/etv_heart"
                style="@style/font_323232_14"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:background="@drawable/bg_edit_gray"
                android:text="" />


        </LinearLayout>


        <!-- 확인 버튼-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_heart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_title_heart"
                android:textColor="@color/White"
                android:background="@drawable/xml_dialog_yes" />

            <Button
                android:id="@+id/btn_purchase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_title_heart_purchase"
                android:layout_marginLeft="6dp"
                android:textColor="@color/White"
                android:layout_weight="1"
                android:background="@drawable/xml_dialog_yes" />
            <Button
                android:id="@+id/imagebutton_dialog_onemsg_twobtn_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:text="@string/dlg_cancel"
                android:textColor="@color/White"
                android:layout_weight="1"
                android:background="@drawable/xml_dialog_no" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
