<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="180dp"
    android:layout_height="match_parent"
    android:background="@color/gray_f1f1f1">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_c3c3c2" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/White"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_wangjatv"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_app_intro"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_purchase"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_item_purchase"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_rule"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_use_rule"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_event"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_event"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_live"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_live"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_vod"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_vod"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_favorite"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_fav"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_broadcast"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_broadcast"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <com.yj.wangjatv.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_more"
                    android:textColor="@color/gray_323232"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xml_btn_trans_bg_selector"
                    android:id="@+id/btn_more"/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>